welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:8: error: not found: value T
		r = T(c);
                    ^